--- a/setting.ui
+++ b/setting.ui
@@ -37,7 +37,11 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="secret_key"/>
+      <widget class="QLineEdit" name="secret_key">
+       <property name="echoMode">
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
@@ -48,6 +52,16 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="bucket_name"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Outside Catenary:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="outside_catenary"/>
      </item>
     </layout>
    </item>
